[package]
name = "openssh-sftp-protocol"
version = "0.20.1"
edition = "2021"

license = "MIT"
description = "Data format used to communicate with openssh mux server."
repository = "https://github.com/NobodyXu/openssh-sftp-client"

keywords = ["ssh", "multiplex", "async", "network", "sftp"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[dependencies]
libc = "0.2.112"

thiserror = "1.0.30"

num-traits = "0.2"
num-derive = "0.3"

serde = { version = "1.0", features = ["derive"] }
ssh_format = "0.12.0"

bitflags = "1.3.2"
vec-strings = { version = "0.4.3", features = ["serde"] }

shared_arena = "0.8.4"
once_cell = { version = "1.8.0", features = ["parking_lot"] }

[dev-dependencies]
serde_json = "1.0"
serde_test = "1.0"
